# AI-News-Verifier

./: .gitignore  README.md  app.py  evaluate_model.py  main.py  pyproject.toml  requirements.txt
models/: max_lengths.pkl  threshold.pkl
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_json_utils.py
utils/: config.py  gemini_service.py  json_utils.py  lime_explainer.py  predictor.py  preprocessing.py  response_builder.py  scraper.py
