[project]
name = "ai-news-verifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "beautifulsoup4==4.13.4",
    "flask==3.1.2",
    "google-genai==1.31.0",
    "gunicorn==26.0.0",
    "lxml==6.0.0",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "scikit-learn==1.7.1",
    "tensorflow==2.20.0",
]
